k8s/nexus3/deploy_nexus3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus3  # Adjust deployment name as needed
spec:
  replicas: 1 # Adjust replica count as needed
  selector:
    matchLabels:
      app: nexus3
  strategy:
    type: Recreate  # Adjust strategy as needed
  template:
    metadata:
      labels:
        app: nexus3
    spec:
      containers:
      - name: nexus3
        image: sonatype/nexus3:3.72.0-java17-alpine # Adjust with custom or latest Docker image
        ports:
        - containerPort: 8081 # Adjust port as needed
          protocol: TCP
        - containerPort: 8082 # Adjust port as needed
          protocol: TCP
        - containerPort: 8083 # Adjust port as needed
          protocol: TCP
        volumeMounts:
        - name: nexus-data  # Adjust volume name as needed
          mountPath: /nexus-data  # The default path for volume mounting inside container
      volumes:
      - name: nexus-data
        hostPath:
          path: /path/to/custom/nexus-data/folder # Adjust custom bind mount folder or use dedicated Physical Volume and Volume Claim
